--- a/js高级/003--类的继承.html
+++ b/js高级/003--类的继承.html
@@ -9,20 +9,27 @@
     <script>
         // 1. 类的继承
         class Father {
-            constructor() {
-
+            constructor(x, y) {
+                this.x = x;
+                this.y = y;
             }
             // 这个是方法 需要添加小  () 
             money() {
                 console.log(100);
             }
+            sum() {
+                console.log(this.x + this.y);
+            }
         }
         class Son extends Father {
+            constructor(x, y) {
+                super(x, y); // 调用了父类中的构造函数
+            }
+        } 
 
-        }
-
-        var son = new Son();
-        son.money();
+        var son = new Son(1, 2); // 这里 Son中的参数 和constructor 中的参数是有关系的
+        // son.money();
+        son.sum();
 
     </script>
 </body>
