写文章的开始

--- a/js高级/004--子类继承父类的方法的同时扩展自己的方法.html
+++ b/js高级/004--子类继承父类的方法的同时扩展自己的方法.html
@@ -24,6 +24,7 @@
                 // 自己打一遍真的会发现很多的错误呢
                 // 利用super 调用父类的构造函数
                 // super 必须在子类this之前调用
+                super(x, y);
                 this.x = x;
                 this.y = y;
             }
