--- a/1--4个小时带你快速入门vue/001--vue基础.html
+++ b/1--4个小时带你快速入门vue/001--vue基础.html
@@ -12,7 +12,7 @@
         {{ message }}
         <span>  {{ message }} </span>
     </h2>
-    <!-- 开发环境版本，包含了有帮助的命令行警告 -->
+    <!-- 1. 开发环境版本，包含了有帮助的命令行警告 -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
         var app = new Vue({
