--- a/1--4个小时带你快速入门vue/007--v-bind.html
+++ b/1--4个小时带你快速入门vue/007--v-bind.html
@@ -9,7 +9,8 @@
 <body>
   <!-- 
     1. v-bind设置元素的属性（比如：src,title,class）
-    2. 
-   -->
+    2. v-bind:src="" 的缩写是
+        :src=""
+  -->
 </body>
 </html>
