--- a/1--4个小时带你快速入门vue/demo-悦听player/模板.html
+++ b/1--4个小时带你快速入门vue/demo-悦听player/模板.html
@@ -17,14 +17,18 @@
       <div class="search_bar">
         <img src="images/player_title.png" alt="" />
         <!-- 搜索歌曲 -->
-        <input type="text" autocomplete="off" v-model="query" @keyup.enter="searchMusic" />
+        <!-- 双向绑定 -->
+        <input type="text" autocomplete="off" v-model="query" @keyup.enter="searchMusic"/>
       </div>
       <div class="center_con">
         <!-- 搜索歌曲列表 -->
         <div class='song_wrapper'>
           <ul class="song_list">
-           <li><a href="javascript:;"></a> <b>你好</b> <!----></li>
-           <li><a href="javascript:;"></a> <b>你好</b> <span><i></i></span></li>
+           <li v-for="item in musicList">
+             <a href="javascript:;" @click="playMusic(item.id)"></a> 
+             <b>{{ item.name }}</b> 
+             <span><i></i></span>
+            </li>
           </ul>
           <img src="images/line.png" class="switch_btn" alt="">
         </div>
@@ -59,11 +63,11 @@
       </div>
     </div>
   </div>
-  <!-- 开发环境版本，包含了有帮助的命令行警告 -->
+  <!-- 1. 开发环境版本，包含了有帮助的命令行警告 -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <!-- 官网提供的 axios 在线地址 -->
+  <!-- 2. 官网提供的 axios 在线地址 -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
