--- a/学不下去的时候怎么怎么办.html
+++ b/学不下去的时候怎么怎么办.html
@@ -18,7 +18,9 @@
             7. 睡会觉，养足精神<br>  
             8. 玩会什么都行，重要的是休息好再出发<br>  
             9. 阅读微信读书<br>
-            10. 准备面经的一些内容等等（小米）       
+            10. 准备面经的一些内容等等（小米）<br>
+            11. 采用倒逼学习法是真的有效（学习那个4小时入门vue）<br>
+            12. 前端的一些文章       
         </p>
     </div> 
 </body>
