--- a/1--4个小时带你快速入门vue/demo-悦听player/模板.html
+++ b/1--4个小时带你快速入门vue/demo-悦听player/模板.html
@@ -27,7 +27,9 @@
            <li v-for="item in musicList">
              <a href="javascript:;" @click="playMusic(item.id)"></a> 
              <b>{{ item.name }}</b> 
-             <span><i></i></span>
+             <span>
+               <i v-if="item.mvid!=0" @click="playMV(item.mvid)"></i>
+              </span>
             </li>
           </ul>
           <img src="images/line.png" class="switch_btn" alt="">
@@ -60,9 +62,9 @@
         <!-- 双向绑定的:src   这个怎么忘记了 -->
         <audio ref='audio' @play="play" @pause="pause" :src="musicUrl" controls autoplay loop class="myaudio"></audio>
       </div>
-      <div class="video_con"  style="display: none;">
-        <video  controls="controls"></video>
-        <div class="mask" ></div>
+      <div class="video_con" v-show="isShow" style="display: none;">
+        <video :src="mvUrl" controls="controls"></video>
+        <div class="mask" @click="hide"></div>
       </div>
     </div>
   </div>
