--- a/js高级/002--类里面添加方法.html
+++ b/js高级/002--类里面添加方法.html
@@ -13,6 +13,7 @@
                 this.uname = uname;
                 this.age = age;
             }
+            // (2) 多个函数之间方法不需要添加逗号分隔
             // 添加唱歌的方法
             sing(song) {
                 // console.log('我唱歌');
