--- a/js高级/004--子类继承父类的方法的同时扩展自己的方法.html
+++ b/js高级/004--子类继承父类的方法的同时扩展自己的方法.html
@@ -25,6 +25,7 @@
                 // 利用super 调用父类的构造函数
                 // super 必须在子类this之前调用
                 super(x, y);
+                // 1. 也就是说必须先调用父类的构造方法，再使用子类构造方法
                 this.x = x;
                 this.y = y;
             }
