--- a/2--Echarts/charts-project/index.html
+++ b/2--Echarts/charts-project/index.html
@@ -7,12 +7,57 @@
     <title>数据可视化项目</title>
     <!-- rel 属性规定当前文档与被链接文档之间的关系。 -->
     <!-- stylesheet	文档的外部样式表。 -->
+
+    <!-- 1. 先引入字体图标的样式才行 -->
+    <link rel="stylesheet" href="fonts/icomoon.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/echarts.min.js"></script>
     <script src="js/flexible.js"></script>
     <script src="js/jquery.min.js"></script>
 </head>
 <body>
-    123442412dfsdffds
+    <!-- 父容器大盒子 -->
+    <div class="viewport">
+        <div class="column">
+            <div class="panel overview">
+                <div class="inner">
+                    <ul>
+                        <li>
+                            <h4>2190</h4>
+                            <span>
+                                <i class="icon-dot" style="color: #006cff"></i>
+                                设备总数
+                            </span>
+                        </li>
+                        <li>
+                            <h4>190</h4>
+                            <span>
+                                <i class="icon-cup1" style="color: #6acca3"></i>
+                                季度新增
+                            </span>
+                        </li>
+                        <li>
+                            <h4>3001</h4>
+                            <span>
+                                <i class="icon-clock" style="color: #6acca3"></i>
+                                运营设备
+                            </span>
+                        </li>
+                        <li>
+                            <h4>108</h4>
+                            <span>
+                                <i class="icon-down" style="color: #ed3f35"></i>
+                                异常设备
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>       
+        <div class="column">2</div>
+        <div class="column">3</div>
+        
+
+    </div>
 </body>
 </html>
