--- a/22-vue基础/010--品牌列表案例.html
+++ b/22-vue基础/010--品牌列表案例.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./lib/bootstrap-3.3.7.css">
+
 </head>
 <body>
     <!-- 
@@ -18,6 +20,7 @@
    <!-- 
      二 存在的问题
       1. 写的some() 和 findIndex() 是为了什么呢 删除对应的那个条？
+      2. 引入那个bootstrap 用处是？
    -->
 
    <!--
@@ -25,7 +28,7 @@
       
    -->
   <div id="app">
-
+     
   </div>
 
   <!-- 1. 先引入再讲Vue.js -->
