--- a/1--Html和html3/001--HTML基础.html
+++ b/1--Html和html3/001--HTML基础.html
@@ -1,14 +1,25 @@
+<!-- 1. 当前页面采用的是HTML5版本来显示网页的 -->
 <!DOCTYPE html>
-<html lang="en">
+<!-- 当前文档的显示语言 -->
+<html lang="zh-CN">
+
 <head>
+    <!-- 
+        3. 字符集，以便计算机能够识别和存储各种文字
+        UTF也被成为万国码，基本包含了全世界所以国家需要用到的字符
+    -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <div>111999</div>
+    <div class="div1">111999</div>
     <div>111999</div>
     <div>111</div>
+    <div></div>
 </body>
+
 </html>
