--- a/1--Html和html3/1--学成在线/index.html
+++ b/1--Html和html3/1--学成在线/index.html
@@ -89,11 +89,184 @@
 
             <div class="course">
                 <h3>我的课程表</h3>
-                <div class="bd">123</div>
+                <div class="bd">
+                    <ul>
+                        <li>
+                            <h4>继续学习 程序语言设计</h4>
+                            <p>正在学习·使用对象</p>
+                        </li>
+                        <li>
+                            <h4>继续学习 程序语言设计</h4>
+                            <p>正在学习·使用对象</p>
+                        </li>
+                        <li>
+                            <h4>继续学习 程序语言设计</h4>
+                            <p>正在学习·使用对象</p>
+                        </li>
+                    </ul>
+                    <a href="#" class="more">全部课程</a>
+                </div>
             </div>
         </div>
     </div>
     <!-- banner区域结束了 -->
+    <!-- 3 商品推荐模块开始 -->
+    <div class="goods w">
+        <h3>精品推荐</h3>
+        <ul>
+            <li>
+                <a href="#">jQuery</a>
+                <a href="#">jQuery</a>
+                <a href="#">jQuery</a>
+                <a href="#">jQuery</a>
+                <a href="#">jQuery</a>
+            </li>
+        </ul>
+        <a href="#" class="mod">修改兴趣</a>
+    </div>
+    <!-- 商品推荐模块结束 -->
+    <!-- 4 box核心内容开始 -->
+    <div class="box w">
+        <div class="box-hd">
+            <h3>精品推荐</h3>
+            <a href="#">查看全部</a>
+        </div>
+        <div class="box-bd">
+            <ul class="clearfix">
+                <li>
+                    <em>
+                        <img src="images/new.png" alt="">
+                    </em>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> • 1125人在学习
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- box核心内容结束 -->
+    <!-- 5 底部模块的做法 -->
+    <div class="footer">
+        <div class="w">
+            <div class="copyright">
+                <img src="images/logo.png" alt="">
+                <p>学成在线致力于普及中国最好的教育它与中国一流大学和机构合作提供在线课程。<br> © 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>
+                <a href="#" class="app">下载APP</a>
+            </div>
+            <div class="links">
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd><a href="#">关于</a></dd>
+                    <dd><a href="#">管理团队</a></dd>
+                    <dd><a href="#">工作机会</a></dd>
+                    <dd><a href="#">客户服务</a></dd>
+                    <dd><a href="#">帮助</a></dd>
+                </dl>
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd><a href="#">关于</a></dd>
+                    <dd><a href="#">管理团队</a></dd>
+                    <dd><a href="#">工作机会</a></dd>
+                    <dd><a href="#">客户服务</a></dd>
+                    <dd><a href="#">帮助</a></dd>
+                </dl>
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd><a href="#">关于</a></dd>
+                    <dd><a href="#">管理团队</a></dd>
+                    <dd><a href="#">工作机会</a></dd>
+                    <dd><a href="#">客户服务</a></dd>
+                    <dd><a href="#">帮助</a></dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
