--- a/1--Html和html3/001--HTML基础.html
+++ b/1--Html和html3/001--HTML基础.html
@@ -4,6 +4,16 @@
 <html lang="zh-CN">
 
 <head>
+
+    <!-- （1）布局定位属性（建议display写在第一个，毕竟是关系到模式）
+    display/position/float/clear/visibility/overflow
+    （2）自身属性
+    width/height/margin/padding/border/background
+    （3）文本属性
+    color/font/text-decoration/text-align/vertical-align/white-space/break-word
+    （4）其他属性 
+    content/cursor/border-radius/box-shadow/text-shadow/background:linear-gradient... 
+     -->
     <!-- 
         3. 字符集，以便计算机能够识别和存储各种文字
         UTF也被成为万国码，基本包含了全世界所以国家需要用到的字符
